# PointCloud-BenchMarking

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt
benchmarks/: run_benchmarks.py
configs/: default.yaml
data/ground_truth/: .gitkeep  sphere.npy
data/predicted/: .gitkeep  sphere.npy
notebooks/: .gitkeep  demo.ipynb
src/: __init__.py  logging_config.py
src/evaluation/: __init__.py  batch_evaluator.py  evaluator.py  report.py
src/indexing/: __init__.py  kdtree.py
src/metrics/: __init__.py  chamfer.py  emd.py  fscore.py  hausdorff.py  normal_consistency.py
src/processing/: __init__.py  downsampling.py  io_utils.py  outlier_removal.py  surface_reconstruction.py
src/visualization/: __init__.py  heatmap.py  overlay.py  plots.py
tests/: test_metrics.py
